--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -22,6 +22,15 @@
   color:#fff;
 }
 
+.segment-md .segment-button
+{
+  color:#fff;
+}
+
+.segment-md .segment-button.segment-activated {
+  border-color: #fff;
+}
+
 .toolbar-title-md, .bar-button-default-md
 {
   color:#fff;
@@ -38,6 +47,12 @@ h2
   font-weight: 100;
   margin-bottom:5px;
   margin-left:5px;
+}
+
+.items
+{
+  font-size: 16px;
+  font-weight: 300;
 }
 
 .wp ion-card,
