--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -94,6 +94,11 @@ h2
   border-right: 5px solid #fff;
 }
 
+.border-draw
+{
+  border-right: 5px solid #ff9800;
+}
+
 .bottom_bar
 {
   position: fixed;
@@ -104,4 +109,10 @@ h2
 .swiper-slide {
   overflow-y: scroll;
   display: block;
+}
+
+.info
+{
+  font-size: 30px;
+  color: color($colors, secondary);
 }
