Display more informations about 'Classement' and some test for list 'Résultats'

--- a/src/pages/pool/pool.scss
+++ b/src/pages/pool/pool.scss
@@ -1,3 +1,15 @@
 page-pool {
+  .results
+  {
+    padding-top:10px;
+    padding-left:13px;
+    padding-right:13px;
+  }
 
+  .results-head
+  {
+    padding-bottom:5px;
+    padding-left:13px;
+    padding-right:13px;
+  }
 }
