--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -132,3 +132,15 @@ h2
 {
   background-color:#fff;
 }
+
+//div.spinner {
+//  margin: auto;
+//  position: absolute;
+//  top: 0; left: 0; bottom: 0; right: 0;
+//  height: 85px;
+//  text-align: center;
+//}
+//.spinner svg {
+//  width: 19% !important;
+//  height: 85px !important;
+//}
