--- a/src/pages/pool/pool.scss
+++ b/src/pages/pool/pool.scss
@@ -20,4 +20,16 @@ page-pool {
     text-transform: uppercase;
     font-weight: bold;
   }
+
+  .label-md
+  {
+    margin-bottom:0px;
+  }
+
+  #list-match
+  {
+    padding-bottom:13px;
+  }
+
+
 }
