--- a/src/pages/team/team.scss
+++ b/src/pages/team/team.scss
@@ -1,3 +1,35 @@
 page-team {
+  .item-md, .item-inner
+  {
+    padding:0px;
+  }
 
+  .item-md.item-block .item-inner {
+    border-bottom: 1px solid #dedede;
+  }
+
+  .label-md
+  {
+    margin:0px;
+  }
+
+  .border-win
+  {
+    border-left: 5px solid #4caf50;
+  }
+
+  .border-lose
+  {
+    border-left: 5px solid #f44336;
+  }
+
+  .border-inc
+  {
+    border-left: 5px solid #c5c5c5;
+  }
+
+  .border-draw
+  {
+    border-left: 5px solid #ff9800;
+  }
 }
