--- a/src/pages/event/event.scss
+++ b/src/pages/event/event.scss
@@ -1,5 +1,8 @@
 page-event {
   .color-star{
-    color:yellow;
+    color:#F9A825;
+  }
+  .ion-md-star-outline:before {
+    color:#F9A825;
   }
 }
