--- a/src/pages/team/team.scss
+++ b/src/pages/team/team.scss
@@ -32,4 +32,18 @@ page-team {
   {
     border-left: 5px solid #ff9800;
   }
+
+  .sports-img
+  {
+    margin-left:auto;
+    margin-right:auto;
+    margin-top:5px;
+    width: 35px;
+    height: 35px;
+  }
+
+  .sports-label
+  {
+    margin-top:5px;
+  }
 }
