--- a/src/pages/event/event.scss
+++ b/src/pages/event/event.scss
@@ -13,4 +13,21 @@ page-event {
   .header-md::after{
     background-image: none;
   }
+
+  .tournament-name {
+    background-color: #42A5F5;
+  }
+
+  .classement {
+    background-color: white;
+  }
+
+  .no-margin-padding {
+    padding: 0px;
+    margin: 0px;
+  }
+
+  b{
+    color: white;
+  }
 }
