Add classement in tournament view and ready to deploy

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -128,3 +128,11 @@ ion-label{
   white-space: normal;
 
 }
+
+.color-star{
+  color: color($colors, success);
+}
+
+.ion-md-star-outline:before {
+  color: color($colors, success);
+}
