--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -26,7 +26,7 @@ $colors: (
   primary:    #42a5f5,
   secondary:  #2980b9,
   danger:     #f44336,
-  success:    #4caf50,
+  success:    #F9A825,
 );
 
 
