--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -26,6 +26,14 @@
   border: 0px;
 }
 
+.toolbar-title .toolbar-title-md, .toolbar-title-ios {
+  text-align: center;
+}
+
+.ion-md-menu .ion-ios-menu {
+  float:right;
+}
+
 .toolbar .searchbar-ios .searchbar-input {
   background: #fff;
 }
@@ -162,3 +170,6 @@ ion-label{
   color: #9e9e9e;
 }
 
+.menu-button {
+  float: right;
+}
