wip - slider pool
still have to set the active slide to current stage

--- a/src/pages/tournament/tournament.scss
+++ b/src/pages/tournament/tournament.scss
@@ -12,5 +12,9 @@ page-tournament {
   .swiper-container-horizontal > .swiper-pagination {
     bottom:5px;
   }
+  .status-icon
+  {
+      margin-left:auto;
+  }
 
 }
