Fix imgs list of pools

--- a/src/pages/tournament/tournament.scss
+++ b/src/pages/tournament/tournament.scss
@@ -14,7 +14,9 @@ page-tournament {
   }
   .status-icon
   {
-      margin-left:auto;
+    height: 20px;
+    width: 20px;
+    margin-left:auto;
   }
 
 }
