Add custom toast style

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -173,3 +173,15 @@ ion-label{
 .menu-button {
   float: right;
 }
+
+.toastError div
+{
+    //background-color: #F44336;
+    background-color: map-get($colors, danger);
+}
+
+.toastSuccess div
+{
+    //background-color: #4CAF50;
+    background-color: map-get($colors, successCustom);
+}
