--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -23,11 +23,11 @@ $background-color:  #F5F5F5;
 // The "primary" color is the only required color in the map.
 
 $colors: (
-  primary:    #42a5f5,
+  primary:    #4285F4,
   secondary:  #2980b9,
-  danger:     #f44336,
+  danger:     #DB4437,
   success:    #F9A825,
-  successCustom: #4CAF50,
+  successCustom: #0F9D58,
 );
 
 
