--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -200,3 +200,17 @@ ion-label{
     position: absolute;
   }
 }
+
+.separation {
+  background-color: map-get($colors, primary);
+  b {
+    color: white;
+  }
+}
+
+.no-margin-padding {
+  padding: 0;
+  margin: 0;
+}
+
+
