Change star color

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -163,7 +163,7 @@ ion-label{
 }
 
 .ion-md-star-outline:before, .ion-ios-star-outline:before {
-  color: color($colors, success);
+  color: color($colors, primary);
 }
 
 .item-md ion-note {
