Update color with Google color

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -24,7 +24,7 @@ $background-color:  #F5F5F5;
 
 $colors: (
   primary:    #4285F4,
-  secondary:  #2980b9,
+  secondary:  #4285F4,
   danger:     #DB4437,
   success:    #F9A825,
   successCustom: #0F9D58,
