--- a/src/pages/event/event.scss
+++ b/src/pages/event/event.scss
@@ -8,7 +8,7 @@ page-event {
     }
 
     .tournament-name {
-        background-color: #42A5F5;
+        background-color: map-get($colors, primary);
     }
 
     .ranking {
@@ -22,5 +22,9 @@ page-event {
 
     b {
         color: white;
+    }
+
+    .offlineIcon ion-icon{
+        color: map-get($colors, success);
     }
 }
