--- a/src/app/app.template.html
+++ b/src/app/app.template.html
@@ -7,8 +7,8 @@
 
     <ion-content>
         <ion-list>
-            <button menuClose ion-item *ngFor="let p of pages" (click)="openPage(p)">
-                {{p.title}}
+            <button justify-content-center align-items-center menuClose ion-item *ngFor="let p of pages" (click)="openPage(p)">
+                <ion-icon large class="iconMenu" name="{{ p.icon }}"></ion-icon><span>{{ p.title }}</span>
             </button>
         </ion-list>
     </ion-content>
