--- a/src/pages/team/team.scss
+++ b/src/pages/team/team.scss
@@ -1,5 +1,5 @@
 page-team {
-  .item-md, .item-inner, .item-ios
+/*   .item-md, .item-inner, .item-ios
   {
     padding:0px;
   }
@@ -11,33 +11,37 @@ page-team {
   .label-md, .label-ios
   {
     margin:2px;
-  }
+  } */
 
   .border-win
   {
-    border-left: 5px solid #4caf50;
+    border-left: 7px solid map-get($colors, successCustom);
   }
 
   .border-lose
   {
-    border-left: 5px solid #f44336;
+    border-left: 7px solid map-get($colors, danger);
   }
 
   .border-inc
   {
-    border-left: 5px solid #c5c5c5;
+    border-left: 7px solid #c5c5c5;
   }
 
   .border-draw
   {
-    border-left: 5px solid #ff9800;
+    border-left: 7px solid map-get($colors, success);
   }
 
-  ion-card {
+  .title{
+    color: black;
+  }
+
+/*   ion-card {
       word-wrap: normal;
   }
   ion-col[text-right] {
       direction: rtl;
-  }
+  } */
 
 }
