--- a/src/pages/participant/participant.scss
+++ b/src/pages/participant/participant.scss
@@ -1,5 +1,5 @@
 page-participant {
-  .item-md, .item-inner, .item-ios
+/*   .item-md, .item-inner, .item-ios
   {
     padding:0px;
   }
@@ -11,25 +11,28 @@ page-participant {
   .label-md, .label-ios
   {
     margin:2px;
+  } */
+  .sports-img{
+    height: 35px;
   }
 
   .border-win
   {
-    border-left: 5px solid #4caf50;
+    border-left: 7px solid #4caf50;
   }
 
   .border-lose
   {
-    border-left: 5px solid #f44336;
+    border-left: 7px solid #f44336;
   }
 
   .border-inc
   {
-    border-left: 5px solid #c5c5c5;
+    border-left: 7px solid #c5c5c5;
   }
 
   .border-draw
   {
-    border-left: 5px solid #ff9800;
+    border-left: 7px solid #ff9800;
   }
 }
