Refactor pool page

--- a/src/pages/pool/pool.scss
+++ b/src/pages/pool/pool.scss
@@ -1,5 +1,5 @@
 page-pool {
-    .results {
+/*     .results {
         padding-top: 10px;
         padding-left: 13px;
         padding-right: 13px;
@@ -36,5 +36,5 @@ page-pool {
     }
     ion-col[text-right] {
         direction: rtl;
-    }
+    } */
 }
