--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -17,6 +17,12 @@
 
 /* Empty. Add your own CSS if you like */
 
+body {
+  padding-top:constant(safe-area-inset-top); //for iOS 11.2
+  padding-top:env(safe-area-inset-top); //for iOS 11.1
+}
+  
+
 .toolbar-background {
   background-color: color($colors, primary);
   color:#fff;
