--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -21,6 +21,14 @@ body {
   padding-top:constant(safe-area-inset-top); //for iOS 11.2
   padding-top:env(safe-area-inset-top); //for iOS 11.1
 }
+
+@media (max-width: 380px){
+  .ios ion-toolbar{
+    padding-top: 40px;
+    ion-title{
+      padding-top: 35px;
+    }
+  }
   
 
 .toolbar-background {
